<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.1</version>
    <relativePath /> <!-- lookup parent from maven repository -->
  </parent>

  <groupId>com.brunotacca.caspringmultimodule</groupId>
  <artifactId>ca-spring-multimodule</artifactId>

  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>ca-spring-multimodule</name>
  <description>Clean Architecture with SpringBoot and Maven MultiModule</description>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <sonar.organization>brunotacca</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.jacoco.xmlReportPaths>
      ${project.basedir}/report-aggregate/target/site/jacoco-aggregate/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>

  </properties>

  <!-- https://spring.io/guides/gs/multi-module/#scratch -->
  <!-- Modules declaration -->
  <modules>
    <module>domain</module>
    <module>adapter</module>
    <module>external</module>
    <module>report-aggregate</module>
  </modules>

  <!-- Artifacts specified here will only be included in a child module if it's declared there. -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
        <version>2.7.2</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>2.7.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-devtools</artifactId>
        <scope>runtime</scope>
        <version>2.7.2</version>
        <optional>true</optional>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- Artifacts specified here will always be included as a dependency of the child module(s). -->
  <dependencies>
  </dependencies>

  <profiles>
    <profile>
      <id>coverage</id>
      <build>
      <plugins>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.8</version>
          <executions>
            <execution>
              <id>prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <goals>
                <goal>report</goal>
              </goals>
              <configuration>
                <formats>
                  <format>XML</format>
                </formats>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
      </build>
    </profile>
  </profiles>

</project>